turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:8: error: not found: value i
		setCouleurSol(colors((i + 1) % colors.length));
                                      ^LangtonsAnt:14: error: not found: value i
		setCouleurSol(colors((i + 1) % colors.length));
                                      ^